[package]
name        = "langit"
version     = "0.1.1"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.info"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://github.com/cacilhas/langit"
repository  = "https://github.com/cacilhas/langit"
keywords    = ["languages", "detector"]
description = "A naïve language detector."
edition     = "2021"

[profile.release]
opt-level     = "s"
codegen-units = 1
debug = false
lto   = true
rpath = false
strip = true

[dependencies]

[dependencies.lingua]
version = "1.5"
default-features = false
features = ["english", "portuguese", "german", "french"]
