[package]
name        = "langit"
version     = "0.1.1"
authors     = ["Rodrigo Montegasppα Cacilhας <montegasppa@cacilhas.cc"]
license     = "BSD-3-Clause"
readme      = "README.md"
homepage    = "https://codeberg.org/cacilhas/langit"
repository  = "https://codeberg.org/cacilhas/langit"
keywords    = ["languages", "detector"]
description = "A naïve language detector."
edition     = "2021"

[profile.release]
opt-level     = "s"
codegen-units = 1
panic = "abort"
debug = false
lto   = true
rpath = false
strip = true

[dependencies]

[dependencies.lingua]
version = "1.5"
default-features = false
features = ["english", "portuguese", "german", "french"]
